fix appearance of submit buttons on iOS devices

--- a/sites/all/themes/say_custom/sass/screen.scss
+++ b/sites/all/themes/say_custom/sass/screen.scss
@@ -95,6 +95,8 @@ input[type=submit]
 	font-weight:bold;
 	font-size:20px;
 	cursor:pointer;
+	appearance: none;
+	-webkit-appearance: none;
 }
 
 .form-actions
